@@ -29,6 +29,7 @@ pycdf
  - deprecate from_dict method of attribute lists; it is redundant with clone.
  - fix BAD_DATA_TYPE bug with datetime attributes in backward-compatible CDF
  - fix bug with finding CDF types for negative floats
+ - fix matching attribute to variable type when assigning attributes to dict
 time
  - dtype in Ticktock can now be a callable (allowing custom time parsing)
 toolbox
